app/assets/stylesheets/admin/base.css.scss
// Core ext.
body {
    // Allow space for the submit-row
    padding-bottom: 120px;
    padding-top: 100px;
}

body, p {
  line-height: 14px;
}

small { 
  font-size: 11px;
}

.breadcrumb {
  &.unstyled {
    padding: 0;
  }
  
  padding-left: 0;
  padding-right: 0;
  margin: 0;
}

// Override a bug in bootstrap
.dropup .btn-large .caret {
    border-bottom-color: $white;
}

.alert .close {
  line-height: 12px;
}

/////////////////////////////////

.fixed-breadcrumbs {
  z-index: 0; // Make the drop-down header stuff visible
  margin-top: 40px;
  @include box-shadow(0 2px 6px rgba(0,0,0,.2));
}

.well.tight {
  padding: 5px;
  h6 { margin: 0 0 5px 0; padding: 0;}
}

p.help-block {
    color: $grayLight;
    font-style: italic;
    font-size: 12px;
}

.audio-fields {
    margin-bottom: 10px;
    padding: 5px;
    
    .audio-info {
        .new-audio, .existing-audio {
            height: 200px;
            border-bottom: 1px solid #ddd;
            margin-bottom: 10px;
        }
    }
    
    .control-group.file {
        .controls { margin: 0; }
    }   
}

.hidden {
    display: none;
}

.list-status {
    text-align: center;
}

.add-on.populate {
    cursor: pointer;
}

// Style the dropdown buttons so they look like links
ul.dropdown-menu li button {
    border: none;
    background: none;
    cursor: pointer;
    width: 100%;
    text-align: left;
    &:hover {
        background: $grayLighter;
    }
}


#fixed-sidebar.affix {
  width: 265px;
  top: 80px;
}

